--- a/brafe-puro/index.html
+++ b/brafe-puro/index.html
@@ -48,18 +48,22 @@
     </section>
 
 
-    <section>
-        <div>
-            <div>
-                <h2>Paulista</h2>
+    <section class="produtos">
+        <div class="produtos-container">
+            <div class="produtos-item">
+                <h2 class="produtos-paulista">Paulista</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id provident quaerat deserunt fugiat tempore laudantium est repellendus aliquam cum illum porro vero at ratione dolores, debitis aliquid veniam, ipsam necessitatibus.</p>
-                <h2>Carioca</h2>
+            </div>
+            <div class="produtos-item">
+                <h2 class="produtos-carioca">Carioca</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id provident quaerat deserunt fugiat tempore laudantium est repellendus aliquam cum illum porro vero at ratione dolores, debitis aliquid veniam, ipsam necessitatibus.</p>
-                <h2>Mineiro</h2>
+            </div>
+            <div class="produtos-item">
+                <h2 class="produtos-mineiro">Mineiro</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id provident quaerat deserunt fugiat tempore laudantium est repellendus aliquam cum illum porro vero at ratione dolores, debitis aliquid veniam, ipsam necessitatibus.</p>
             </div>
         </div>
-        <a href="#">Saiba Mais</a>
+        <a class="produtos-btn" href="#">Saiba Mais</a>
     </section>
 
     <section>
