--- a/brafe-puro/index.html
+++ b/brafe-puro/index.html
@@ -66,28 +66,31 @@
         <a class="produtos-btn" href="#">Saiba Mais</a>
     </section>
 
-    <section>
-        <div>
+    <section class="locais">
+        <div class="locais-item">
             <img src="img/botafogo.jpg" alt="Brafe unidade botafogo">
             <div>
                 <h2>Botafogo</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni esse nemo itaque harum explicabo ad quidem nihil officia eaque aspernatur, accusamus omnis laudantium atque. Ut voluptates deserunt vitae ad perferendis.</p>
                 <a href="#">Ver Mapa</a>
             </div>
+        </div>
+        <div class="locais-item">
             <img src="img/iguatemi.jpg" alt="Brafe unidade botafogo">
             <div>
                 <h2>Iguatemi</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni esse nemo itaque harum explicabo ad quidem nihil officia eaque aspernatur, accusamus omnis laudantium atque. Ut voluptates deserunt vitae ad perferendis.</p>
                 <a href="#">Ver Mapa</a>
             </div>
+        </div>
+        <div class="locais-item">
             <img src="img/mineirao.jpg" alt="Brafe unidade botafogo">
             <div>
                 <h2>Mineirao</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni esse nemo itaque harum explicabo ad quidem nihil officia eaque aspernatur, accusamus omnis laudantium atque. Ut voluptates deserunt vitae ad perferendis.</p>
                 <a href="#">Ver Mapa</a>
             </div>
-            
-        </div>
+        </div>  
     </section>
 
     <section>
