--- a/brafe-puro/index.html
+++ b/brafe-puro/index.html
@@ -93,24 +93,26 @@
         </div>  
     </section>
 
-    <section>
-        <div>
-            <div>
+    <section class="assine">
+        <div class="assine-container">
+            <div class="assine-info">
                 <h2>Assine Nossa Newsletter</h2>
                 <p>Promoções e eventos mensais</p>
             </div>
             <form action="">
                 <label for="">E-mail</label>
                 <input type="text" placeholder="Digite seu e-mail">
-                <button type="submit"></button>
+                <button type="submit">Enviar</button>
             </form>
         </div>
     </section>
 
-    <footer>
-        <div>
-            <p>Este é um projeto da origamid. Mais em origamid.com <br> Endereço - Rio de janeiro</p>
+    <footer class="footer">
+        <div class="footer-container">
+            <p>Desenvolvido por Leonardo Donderi Rodrigues </p><p></p><a href="https://www.github.com/donderileo" target="_blank"><img class="git" src="img/git.svg" alt="github"></a></p>
             <img src="img/brafe.png" alt="Brafe">
+            
+            
         </div>
     </footer>
 </body>
