13 - Grid Responsivo HTML

--- a/brafe-puro/index.html
+++ b/brafe-puro/index.html
@@ -109,7 +109,7 @@
 
     <footer class="footer">
         <div class="footer-container">
-            <p>Desenvolvido por Leonardo Donderi Rodrigues </p><p></p><a href="https://www.github.com/donderileo" target="_blank"><img class="git" src="img/git.svg" alt="github"></a></p>
+            <p>Desenvolvido por Leonardo Donderi Rodrigues </p><p><a href="https://www.github.com/donderileo" target="_blank"><img class="git" src="img/git.svg" alt="github"></a></p>
             <img src="img/brafe.png" alt="Brafe">
             
             
