--- a/brafe-grid/index.html
+++ b/brafe-grid/index.html
@@ -89,7 +89,7 @@ aente quente, mas também pode ser consumido gelado. Ele é um estimulante, por 
 			<div class="grid-6">
 				<img src="img/botafogo.jpg" alt="Brafé unidade Mineirão">
 			</div>
-			<div>
+			<div class="grid-6">
 				<h2>Mineirão</h2>
 				<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
 				<a href="#">Ver Mapa</a>
@@ -104,7 +104,7 @@ aente quente, mas também pode ser consumido gelado. Ele é um estimulante, por 
 				<h2>Assine Nossa Newsletter</h2>
 				<p>promoções e eventos mensais</p>
 			</div>
-			<form grid-6>
+			<form class="grid-6">
 				<label>E-mail</label>
 				<input type="text" placeholder="Digite seu e-mail">
 				<button type="submit">Enviar</button>
